[gd_scene load_steps=20 format=3 uid="uid://c3njs5gj75ppi"]

[ext_resource type="Script" path="res://Scenes/Pause Menu/pause_menu_button.gd" id="1_x8mop"]
[ext_resource type="Texture2D" uid="uid://7hu5jvedc3w1" path="res://Assets/2D/Sprites/Museum Ui/Menu_Icon.png" id="1_ygicn"]
[ext_resource type="Texture2D" uid="uid://dggwn6fbxefyq" path="res://Assets/2D/Sprites/Museum Ui/Untitled_7.png" id="2_8uo1c"]
[ext_resource type="Script" path="res://Scenes/Pause Menu/pause_menu.gd" id="2_47s05"]
[ext_resource type="Script" path="res://Plugins/Keybind/SettingsDataContainer.gd" id="3_afjxx"]
[ext_resource type="Script" path="res://Scripts/SettingsMenu/Audio.cs" id="3_m1stg"]
[ext_resource type="Script" path="res://Scripts/SettingsMenu/Graphics.cs" id="4_33lpo"]
[ext_resource type="PackedScene" uid="uid://ouhmqp7q5h10" path="res://Scenes/Settings Menu/Volume_Slider_Settings.tscn" id="4_hicjn"]
[ext_resource type="Theme" uid="uid://xt21gex7v5rn" path="res://Themes/Museum ui.tres" id="4_ynyrp"]
[ext_resource type="PackedScene" uid="uid://bffmgqpet85vg" path="res://Scenes/Settings Menu/Hotkey_Rebind_Button.tscn" id="5_sv46g"]
[ext_resource type="Texture2D" uid="uid://cx2x1gi8ngfp3" path="res://Assets/2D/Sprites/Museum Ui/button.png" id="5_yugtr"]
[ext_resource type="Shader" path="res://Scripts/Shaders/SimpleBlur.gdshader" id="9_lnjo7"]
[ext_resource type="Shader" path="res://Scripts/Shaders/SimpleBlur.gdshader" id="9_yc7tk"]
[ext_resource type="Texture2D" uid="uid://dmvybcmnlotge" path="res://Assets/2D/Sprites/Mine Sprites/Mine Scene Background/bg.png" id="10_v70c6"]
[ext_resource type="Theme" uid="uid://d4nuoj106bh6v" path="res://Themes/Theme1.tres" id="11_5kqp1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lr8jx"]
texture = ExtResource("1_ygicn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uuskr"]
texture = ExtResource("5_yugtr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5tbnj"]
shader = ExtResource("9_lnjo7")
shader_parameter/blur_radius = 0.059
shader_parameter/blur_amount = 1.0
shader_parameter/blur_inner = 0.6
shader_parameter/blur_outer = 0.66

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y1310"]
shader = ExtResource("9_yc7tk")
shader_parameter/lod = 1.5

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="pause_menu_button" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
scale = Vector2(0.993248, 1.00411)
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxTexture_lr8jx")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_lr8jx")
theme_override_styles/hover = SubResource("StyleBoxTexture_lr8jx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lr8jx")
theme_override_styles/normal = SubResource("StyleBoxTexture_lr8jx")
script = ExtResource("1_x8mop")

[node name="pause_menu" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8uo1c")
script = ExtResource("2_47s05")

[node name="MarginContainer" type="MarginContainer" parent="pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="pause_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ynyrp")
theme_override_colors/font_color = Color(0.576471, 0.203922, 0.121569, 1)
theme_override_font_sizes/font_size = 50
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back_button" type="Button" parent="pause_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ynyrp")
theme_override_colors/font_color = Color(0.996078, 0.952941, 0.886275, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/hover = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/normal = SubResource("StyleBoxTexture_uuskr")
text = "Back"
icon_alignment = 1
expand_icon = true

[node name="settings_button" type="Button" parent="pause_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ynyrp")
theme_override_colors/font_color = Color(0.996078, 0.952941, 0.886275, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/hover = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/normal = SubResource("StyleBoxTexture_uuskr")
text = "Settings"
icon_alignment = 1
expand_icon = true

[node name="Button3" type="Button" parent="pause_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ynyrp")
theme_override_colors/font_color = Color(0.996078, 0.952941, 0.886275, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/hover = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/normal = SubResource("StyleBoxTexture_uuskr")
text = "Main Menu"
icon_alignment = 1
expand_icon = true

[node name="Button4" type="Button" parent="pause_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ynyrp")
theme_override_colors/font_color = Color(0.996078, 0.952941, 0.886275, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/hover = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uuskr")
theme_override_styles/normal = SubResource("StyleBoxTexture_uuskr")
text = "Desktop"
icon_alignment = 1
expand_icon = true

[node name="settings_menu" type="Control" parent="."]
visible = false
material = SubResource("ShaderMaterial_5tbnj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00943)
script = ExtResource("3_afjxx")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="settings_menu"]
material = SubResource("ShaderMaterial_y1310")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_v70c6")

[node name="MarginContainer" type="MarginContainer" parent="settings_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 200
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="settings_menu/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(632.065, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme = ExtResource("11_5kqp1")
theme_override_colors/font_color = Color(0.239216, 0.0980392, 0.247059, 1)
theme_override_colors/font_outline_color = Color(0.996078, 0.952941, 0.886275, 1)
theme_override_font_sizes/font_size = 64
text = "   Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit Button" type="Button" parent="settings_menu/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 60)
layout_mode = 2
theme = ExtResource("11_5kqp1")
text = "X"

[node name="TabContainer" type="TabContainer" parent="settings_menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("11_5kqp1")
tab_alignment = 1
current_tab = 0

[node name="Interface" type="TabBar" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Interface/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Interface/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="UI Scaling" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Interface/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Interface/MarginContainer/ScrollContainer/VBoxContainer/UI Scaling"]
layout_mode = 2
theme = ExtResource("11_5kqp1")
text = "UI Scaling"

[node name="HSlider" type="HSlider" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Interface/MarginContainer/ScrollContainer/VBoxContainer/UI Scaling"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Language" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Interface/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Interface/MarginContainer/ScrollContainer/VBoxContainer/Language"]
layout_mode = 2
theme = ExtResource("11_5kqp1")
text = "Language"

[node name="OptionButton" type="OptionButton" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Interface/MarginContainer/ScrollContainer/VBoxContainer/Language"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 2
popup/item_0/text = "English"
popup/item_1/text = "Bangla"
popup/item_1/id = 1

[node name="Audio" type="TabBar" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_m1stg")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="Volume_Slider_Settings" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_hicjn")]
layout_mode = 2
bus_name = "Master"

[node name="Volume_Slider_Settings2" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_hicjn")]
layout_mode = 2
bus_name = "Music"

[node name="Volume_Slider_Settings3" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_hicjn")]
layout_mode = 2
bus_name = "SFX"

[node name="Volume_Slider_Settings4" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_hicjn")]
layout_mode = 2
bus_name = "UI"

[node name="Volume_Slider_Settings5" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_hicjn")]
layout_mode = 2
bus_name = "Ambiance"

[node name="Gameplay" type="TabBar" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="Edge Scrolling" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Label2" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer/VBoxContainer/Edge Scrolling"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("11_5kqp1")
text = "Edge Scrolling"

[node name="CheckBox" type="CheckBox" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer/VBoxContainer/Edge Scrolling"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Mouse Wheel Speed" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer/VBoxContainer/Mouse Wheel Speed"]
layout_mode = 2
theme = ExtResource("11_5kqp1")
text = "Mouse Wheel Speed"

[node name="OptionButton" type="OptionButton" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer/VBoxContainer/Mouse Wheel Speed"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
item_count = 2
popup/item_0/text = "English"
popup/item_1/text = "Bangla"
popup/item_1/id = 1

[node name="Mouse Wheel Acceleration" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer/VBoxContainer/Mouse Wheel Acceleration"]
layout_mode = 2
theme = ExtResource("11_5kqp1")
text = "Mouse Wheel Acceleration"

[node name="OptionButton" type="OptionButton" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Gameplay/MarginContainer/ScrollContainer/VBoxContainer/Mouse Wheel Acceleration"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
item_count = 2
popup/item_0/text = "English"
popup/item_1/text = "Bangla"
popup/item_1/id = 1

[node name="Graphics" type="TabBar" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer" node_paths=PackedStringArray("_windowModeOptionButton", "_resolutionOptionButton")]
visible = false
layout_mode = 2
script = ExtResource("4_33lpo")
_windowModeOptionButton = NodePath("MarginContainer/ScrollContainer/VBoxContainer/Window Mode/OptionButton")
_resolutionOptionButton = NodePath("MarginContainer/ScrollContainer/VBoxContainer/Resolution/OptionButton")
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Resolution" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Resolution"]
layout_mode = 2
theme = ExtResource("11_5kqp1")
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16

[node name="Frame Rate Cap" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Frame Rate Cap"]
layout_mode = 2
theme = ExtResource("11_5kqp1")
text = "Frame Rate Cap"

[node name="OptionButton" type="OptionButton" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Frame Rate Cap"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
selected = 0
item_count = 2
popup/item_0/text = "60"
popup/item_1/text = "90"
popup/item_1/id = 1

[node name="Window Mode" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Window Mode"]
layout_mode = 2
theme = ExtResource("11_5kqp1")
text = "Window Mode"

[node name="OptionButton" type="OptionButton" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Window Mode"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16

[node name="Post-Processing" type="HBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Post-Processing"]
layout_mode = 2
theme = ExtResource("11_5kqp1")
text = "Post-Processing"

[node name="CheckBox2" type="CheckBox" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Post-Processing"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Keybinds" type="TabBar" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="MarginContainer" type="MarginContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Keybinds"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Keybinds/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Keybinds/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="HSeparator" type="HSeparator" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Keybinds/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HotkeyRebindButton" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Keybinds/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_sv46g")]
layout_mode = 2

[node name="HotkeyRebindButton2" parent="settings_menu/MarginContainer/VBoxContainer/TabContainer/Keybinds/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_sv46g")]
layout_mode = 2
action_name = "move_right"

[node name="Button" type="Button" parent="settings_menu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Save"

[node name="setting_menu_close_button" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 75.0
offset_bottom = 75.0
text = "X"

[connection signal="pressed" from="pause_menu_button" to="pause_menu_button" method="_on_pressed"]
[connection signal="pressed" from="pause_menu/MarginContainer/VBoxContainer/back_button" to="pause_menu" method="_on_back_button_pressed"]
[connection signal="pressed" from="pause_menu/MarginContainer/VBoxContainer/settings_button" to="pause_menu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="settings_menu/MarginContainer/VBoxContainer/HBoxContainer/Exit Button" to="settings_menu" method="_on_exit_button_pressed"]
[connection signal="item_selected" from="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Resolution/OptionButton" to="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics" method="OnResolutionSelected"]
[connection signal="item_selected" from="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer/Window Mode/OptionButton" to="settings_menu/MarginContainer/VBoxContainer/TabContainer/Graphics" method="OnWindowModeSelected"]
[connection signal="pressed" from="setting_menu_close_button" to="pause_menu" method="_on_setting_menu_close_button_pressed"]
